# largeModelAgents

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
develop/: README.md  app测试文档.docx
develop/app/: AGENT_INTEGRATION_GUIDE.md  README.md  build.gradle  gradle.properties  settings.gradle
develop/app/app/: build.gradle
develop/app/app/src/main/: AndroidManifest.xml
develop/app/app/src/main/cpp/: CMakeLists.txt  llama-android.cpp
develop/app/gradle/wrapper/: gradle-wrapper.properties
develop/app/mobile/: README.md
develop/app/mobile/assets/questionnaires/: gad7.json  phq9.json
develop/baseapp/: README.md
develop/baseapp/basemodel/: chat.gguf  judgement.gguf
develop/baseapp/project/: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
develop/baseapp/project/app/: .gitignore
develop/baseapp/project/app/src/main/cpp/: CMakeLists.txt  llama-android.cpp
develop/baseapp/project/server/: pom.xml
develop/deployment/: docker-compose.yml
develop/projectV3/: AGENT_INTEGRATION_GUIDE.md  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
develop/projectV3/app/: README.md  build.gradle  local.properties
develop/projectV3/app/release/: app-release.apk  output-metadata.json
develop/projectV3/app/src/main/: AndroidManifest.xml
develop/projectV3/gradle/wrapper/: gradle-wrapper.properties
develop/projectV3/server/: DEPLOYMENT_NOTES.md  README.md
develop/projectV3/sql/: ai_chat_v3.sql
develop/scripts/: setup_venv.ps1
develop/server/: pom.xml
develop/server/src/main/resources/: application.yml.local
develop/services/api/: README.md  main.py  requirements.txt
docs/: architecture.md
docs/report/: outline.md
model/assessment/: README.md  requirements.txt
model/assessment/configs/: default.yaml
model/assessment/data/: README.md
model/assessment/data/datasets/metadata/: dataset_info.json
model/assessment/docs/: EXPORT_QUANTIZE_GUIDE.md  QUANTIZATION_SUMMARY.md  README.md  finetune_plan.md  label_system.md  qwen15_test_guide.md  qwen15_test_status.md  steps.md
model/assessment/evaluation/: evaluate.py
model/assessment/inference/: serve.py
model/assessment/labeling/: README.md  requirements.txt
model/assessment/labeling/prompts/: min_instruction.txt
model/assessment/labeling/scripts/: common.py  provider_gemini.py  provider_ollama.py  provider_openai.py  run_labeling.py  split_jsonl.py
model/assessment/logs/: llf_mindchat_qwen2_05b_dora_50844.err  llf_mindchat_qwen2_05b_dora_50844.out  llf_mindchat_qwen2_05b_dora_50849.err  llf_mindchat_qwen2_05b_dora_50849.out  llf_mindchat_qwen2_05b_lora_50804.err  llf_mindchat_qwen2_05b_lora_50804.out
model/assessment/results/: gguf_detailed_test.json  json_postprocessor_summary.md  mental_assessment_test.json  mental_assessment_test_summary.md  model_analysis.json  model_analysis_detailed.json  quantization_plan_report.json  quantized_model_test.json  training_analysis.md
model/assessment/scripts/: convert_data.py  convert_to_gguf.sh  export_and_quantize.sh  export_quantize.sh  export_to_gguf.sh  infer.py  json_postprocessor.py  merge_config.yaml  merge_lora.py  prepare_sft_dataset.py  test_gguf_detailed.py  test_mental_assessment.py  test_model.py  test_quantized_model.py  train_llf_mindchat_qwen2_05b.sh  train_llf_mindchat_qwen2_05b_dora.sh  train_llf_qwen15_05b.sh  train_llf_qwen15_05b_dora.sh  train_llf_qwen25_05b.sh  train_llf_qwen25_05b_dora.sh  train_llf_r1_qwen1p5b.sh
model/assessment/training/: train.py
model/brain/: readme.md
model/brain/docs/: BRAIN_LLM_V2_README.md  LIGHT_AGENT_TRAINING_GUIDE.md
model/brain/finetune/: brain_train_config.yaml  train_brain.sh
model/brain/scripts/: convert_brain_to_gguf.sh  merge_brain_lora.py  rebuild_brain_data.py  rebuild_brain_data_v2.py  test_brain_model.py  train_brain_v2.sh
model/counseling/: README.md  requirements.txt
model/counseling/configs/: default.yaml
model/counseling/evaluation/: evaluate.py
model/counseling/inference/: serve.py
model/counseling/training/: train.py
model/dialogue_model/: readme.md
model/dialogue_model/data/clear/: format_data_example.py  format_data_from_emollm.py  format_data_from_ques_ans.py
model/dialogue_model/eval_results/: readme.md
model/dialogue_model/eval_results/finetuned/: results.json
model/dialogue_model/eval_results/original/: results.json
model/dialogue_model/examples_experiment/Gemma/: all_results.json  eval_results.json  train_results.json  trainer_log.jsonl
model/dialogue_model/examples_experiment/Qwen/: README.md  all_results.json  eval_results.json  train_results.json  trainer_log.jsonl
model/dialogue_model/finetune/: gemma3_1b_lora_sft.yaml  mincpm-1-0.5b_lora_sft.yaml  qwen2_5_1_5b_lora_sft.yaml
model/dialogue_model/finetune/merge/: gemma3_1b_lora_sft.yaml  mincpm-1-0.5b_lora_sft.yaml  qwen2_5_1_5b_lora_sft.yaml
model/rawdata/: README.md  datasources.json
model/rawdata/clean/: CPsyCounE.jsonl
(+338 files in other folders)
